@@ -1,5 +1,10 @@
-package ru.vsu.amm.java.sports.medals;
+package ru.vsu.amm.java.analyzer;
 
+import ru.vsu.amm.java.entity.Medal;
+import ru.vsu.amm.java.enums.Country;
+import ru.vsu.amm.java.enums.KindOfSport;
+
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -12,7 +17,7 @@ public class MedalAnalyzer {
                 .sorted(Map.Entry.<Country, Long>comparingByValue().reversed())
                 .limit(3)
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Map<KindOfSport, List<String>> athletesWhoTookPlaces(List<Medal> medals) {
@@ -30,11 +35,15 @@ public class MedalAnalyzer {
                 .max(Integer::compare)
                 .orElse(0);
 
+        if (maxMedals == 0) {
+            return Collections.emptyList();
+        }
+
         return medals.stream()
                 .collect(Collectors.groupingBy(Medal::getAthlete, Collectors.summingInt(m -> 1)))
                 .entrySet().stream()
                 .filter(entry -> entry.getValue() == maxMedals)
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
